minijinja/tests/snapshots/test_templates__vm@context_number_types.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "integer: {{ integer }} {{ integer is integer }} {{ integer is float }}\nfloat: {{ float }} {{ float is integer }} {{ float is float }}\nexponent: {{ exponent }} {{ exponent is integer }} {{ exponent is float }}\narithmetic: {{ float + 1 }}"
info:
  integer: 4
  float: 4
  exponent: 4
input_file: minijinja/tests/inputs/context_number_types.txt
---
integer: 4 True False
float: 4.0 False True
exponent: 4.0 False True
arithmetic: 5.0
