minijinja/tests/snapshots/test_templates__vm@do_closure.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{% macro other_macro() %}23{% endmacro %}\n{% macro foo() %}[{% do other_macro() %}]{% endmacro %}\n{% set other_macro = 42 %}\nShould not show output of other_macro: {{ foo() }}"
info: {}
input_file: minijinja/tests/inputs/do_closure.txt
---



Should not show output of other_macro: []

