minijinja/tests/snapshots/test_templates__vm@err_bad_addition.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{{ [1, 2] + 23 }}"
info: {}
input_file: minijinja/tests/inputs/err_bad_addition.txt
---
!!!ERROR!!!

Error {
    kind: ImpossibleOperation,
    detail: "tried to use + operator on unsupported types sequence and number",
    name: "err_bad_addition.txt",
    line: 1,
}

impossible operation: tried to use + operator on unsupported types sequence and number (in err_bad_addition.txt:1)
---------------------------- Template Source -----------------------------
   1 > {{ [1, 2] + 23 }}
     i    ^^^^^^^^^^^ impossible operation
--------------------------------------------------------------------------
Referenced variables:
--------------------------------------------------------------------------

